--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div>
-        
+    <div id="boxwrapper" class="d-flex ">
+
     </div>
     <script src="js/script.js"></script>
 </body>
