--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div id="boxwrapper" class="d-flex ">
+    <!--ex01-->
+    <div id="boxwrapper" class="d-flex flex-wrap">
+    </div>
+    <script src="js/script.js"></script>
 
+    <!--ex01-b-->
+    <div id="boxwrapper-b" class="d-flex flex-wrap">
     </div>
     <script src="js/script.js"></script>
 </body>
